cluster/homelab/apps/wger/statefulset.yaml
---
# Patch to add annotations to the StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wger-postgres
  namespace: wger
spec:
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: postgres-data
